--- a/app/src/main/res/layout/layout_actividad_principal.xml
+++ b/app/src/main/res/layout/layout_actividad_principal.xml
@@ -22,4 +22,9 @@
         android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
         android:src="@android:drawable/ic_menu_add" />
 
+    <ImageView
+        android:id="@+id/ivContenido"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </android.support.design.widget.CoordinatorLayout>
